test/invalid/syntactic/number_as_name.sysml
// INVALID: number cannot be used as an identifier
// EXPECTED: Parse error
part def 123Vehicle { }
